# SalsaRaffle

./: .gitignore  LICENSE  README.md  create_groups.py  pyproject.toml  raffle.py  requirements.txt
.github/workflows/: pyright.yaml  ruff.yaml
data/: datagen.py
scripts/: datagen.py
src/salsaraffle/: __init__.py  assign.py  column.py  expressions.py  main.py  members.py  priority.py  registration.py  results.py  roles.py  settings.py
typings/xlsxwriter/: workbook.pyi
