[project]
name = "salsaraffle"
version = "0.1.0"
description = "Raffle slots for a publicly available Salsa class."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["polars[calamine]>=1.7.0", "xlsxwriter>=3.2.0"]

[project.scripts]
raffle = "salsaraffle.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
	# Allow print statements
	"T201",
	# Allow "df" name in small script
	"PD901",
	# overlap with other rules
	"D203",
	"D212",
	# overlap with the ruff formatter
	"COM812",
	"COM819",
	"D206",
	"ISC001",
	"Q000",
	"Q001",
	"Q002",
	"Q003",
	"W191",
]
fixable = ["ALL"]
unfixable = []

[tool.pyright]
typeCheckingMode = "strict"

[tool.uv]
dev-dependencies = ["numpy>=2.1.1", "pyright>=1.1.380", "ruff>=0.6.4"]
